log/build_2026-03-05_18-51-12/roo_web_bridge/stdout_stderr.log
running egg_info
writing ../../build/roo_web_bridge/roo_web_bridge.egg-info/PKG-INFO
writing dependency_links to ../../build/roo_web_bridge/roo_web_bridge.egg-info/dependency_links.txt
writing entry points to ../../build/roo_web_bridge/roo_web_bridge.egg-info/entry_points.txt
writing requirements to ../../build/roo_web_bridge/roo_web_bridge.egg-info/requires.txt
writing top-level names to ../../build/roo_web_bridge/roo_web_bridge.egg-info/top_level.txt
reading manifest file '../../build/roo_web_bridge/roo_web_bridge.egg-info/SOURCES.txt'
writing manifest file '../../build/roo_web_bridge/roo_web_bridge.egg-info/SOURCES.txt'
running build
running build_py
copying roo_web_bridge/web_bridge_node.py -> /home/roo/roo_ws/build/roo_web_bridge/build/lib/roo_web_bridge
running install
running install_lib
copying /home/roo/roo_ws/build/roo_web_bridge/build/lib/roo_web_bridge/web_bridge_node.py -> /home/roo/roo_ws/install/roo_web_bridge/lib/python3.12/site-packages/roo_web_bridge
byte-compiling /home/roo/roo_ws/install/roo_web_bridge/lib/python3.12/site-packages/roo_web_bridge/web_bridge_node.py to web_bridge_node.cpython-312.pyc
  File "/home/roo/roo_ws/install/roo_web_bridge/lib/python3.12/site-packages/roo_web_bridge/web_bridge_node.py", line 164
    finally:
    ^^^^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/roo/roo_ws/install/roo_web_bridge/lib/python3.12/site-packages/roo_web_bridge-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/roo_web_bridge/roo_web_bridge.egg-info to /home/roo/roo_ws/install/roo_web_bridge/lib/python3.12/site-packages/roo_web_bridge-0.0.0-py3.12.egg-info
running install_scripts
Installing web_bridge script to /home/roo/roo_ws/install/roo_web_bridge/lib/roo_web_bridge
writing list of installed files to '/home/roo/roo_ws/build/roo_web_bridge/install.log'
